<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
            <ImageView
                android:id="@+id/image"
                android:layout_gravity="center"
                android:background="@drawable/image_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:maxHeight="500dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/shop_logo"/>
            <ImageButton
                android:id="@+id/addImage"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/icon_camera"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/addImg"/>
            <ImageButton
                android:id="@+id/deleteImage"
                android:layout_gravity="end|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_delete"
                android:background="@android:color/transparent"
                android:contentDescription="@string/dltImg"
                android:padding="0dp"
                android:visibility="gone"/>
        </FrameLayout>    <!--Image-->
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"/>
            <EditText
                android:id="@+id/etShopName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout> <!--ShopName-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>
                <EditText
                    android:id="@+id/etShopAddress"
                    android:inputType="textLongMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/fillLatLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_gravity="center"
                android:src="@mipmap/map"
                android:background="@android:color/transparent"
                android:contentDescription="@string/location"/>
        </LinearLayout> <!--Address-->
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"/>
            <EditText
                android:id="@+id/etPhone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout> <!--Phone number-->
        <Button
            android:id="@+id/btnOK"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="upload"
            android:text="@string/add"
            android:padding="0dp"/>
    </LinearLayout>
</ScrollView>
