<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="200dp">
        <mmsolutions.im.CustomFontTextView
            android:id="@+id/errorMSG"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginBottom="20dp"
            android:text="@string/error"
            android:visibility="invisible"/>

        <mmsolutions.im.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Login"/>
        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textSize="14sp"
            android:maxLength="15"/>

        <mmsolutions.im.CustomFontTextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:maxLength="21"/>

        <mmsolutions.im.CustomFontTextView
            android:id="@+id/link"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotten_pass"/>

        <mmsolutions.im.CustomFontTextView
            android:id="@+id/btnOK"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>