<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp">

        <mmsolutions.im.CustomFontTextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/Login"/>
        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="username"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textSize="14sp"
            android:maxLength="15"/>

        <mmsolutions.im.CustomFontTextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="username@example.com"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:textSize="14sp"/>

        <mmsolutions.im.CustomFontTextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="******"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:maxLength="21"/>

        <mmsolutions.im.CustomFontTextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/confirm_pass"/>
        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="******"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:maxLength="21"/>

        <mmsolutions.im.CustomFontTextView
            android:id="@+id/btnNew"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:text="@string/create"/>
    </LinearLayout>
</ScrollView>