<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@mipmap/logo"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <mmsolutions.im.CustomFontTextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/button"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/login"/>

            <mmsolutions.im.CustomFontTextView
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/button"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/registration"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>