<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/ImageLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:contentDescription="@string/shop_logo"/>
        <ImageButton
            android:id="@+id/addImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/addImg"/>
        <ImageButton
            android:id="@+id/deleteImage"
            android:layout_gravity="end|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dltImg"
            android:padding="0dp"
            android:visibility="gone"/>
        </FrameLayout>

        <TextView
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Наименование*"/>
        <EditText
            android:id="@+id/goods_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Описание*"/>
        <EditText
            android:id="@+id/goods_description"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:inputType="textLongMessage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Цена: "
                android:id="@+id/textView" />
            <EditText
                android:id="@+id/goods_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />
            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/goods_price"
                android:layout_toEndOf="@+id/goods_price" />
            <Switch
                android:id="@+id/show_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout> <!--Price-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout> <!--Category-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Магазин*"/>
        <Spinner
            android:id="@+id/shopSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="20sp">
        </Spinner>

    </LinearLayout>
</ScrollView>